--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "degenbot_2.0",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "DegenBot: A Discord bot for degenerates",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Nathan Stewart",
-  "license": "ISC",
+  "license": "GPL",
   "dependencies": {
     "discord.js": "^14.16.3",
     "node-fetch": "^3.3.2"
